经过测试后的基本功能实现了的提交

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.crazycake</groupId>
+			<artifactId>shiro-redis</artifactId>
+			<version>2.4.2.1-RELEASE</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
 			<version>1.2.5</version>
